--- a/VRChat/40/1200840.html
+++ b/VRChat/40/1200840.html
@@ -71,27 +71,49 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
+  </head>
+  <body>
+    <div class="mini-player-controller" style="display: none;">
+      <a class="scroller" data-smooth-scroll="true"><img class=
+      "mini-player-controller__image" src=
+      "https://asset.booth.pm/assets/thumbnail_placeholder_c_300-09027647543d43ee525b2a7fe28d5ed5a3b6069d0c596c89b21776543ed1c0fe.png"></a><a class="scroller mini-player-information"
+      data-smooth-scroll="true">
+      <div class="mini-player-information__item-name"></div>
+      <div class="mini-player-information__shop-name"></div>
+      <div class="mini-player-information__navigation">
+        試聴中の商品へスクロール
+      </div></a>
+      <div class="mini-player-controls">
+        <div class="mini-player-mode-ui">
+          <div class="mini-player-mode-ui__knob"></div>
+          <div class="mini-player-mode-ui__short">
+            15秒
+          </div>
+          <div class="mini-player-mode-ui__full">
+            フル
+          </div>
+        </div>
+        <div class="mini-player-play-ui"></div>
+      </div>
+    </div>
     <meta content="initial-scale=1.0" id="viewport" name=
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
     "https://asset.booth.pm/assets/3300b3d609d626203a57.js" defer=
     "defer" nonce=
-    "V+9Nz9HVLpEQCNamqBzcVO3QBKCHSNk+pL6odc/mPLs="></script>
+    "gbfSY5sjDkTvxY59Szc7SZZE77X6v4t2INbbvkbodxI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"福豆入りの升","description":"福豆入りの升と豆のセットです。\n別売りの鬼のお面・巻き寿司と組み合わせて節分ごっこができます。\n豆のモデルはパーティクルや物理演算で飛ばす等でご利用ください。※パーティクルは入っていません。\n\n内容\n・福豆入りの升\n・豆（1個）\n\n〇できること\n・VRChatで使用する。\n・VRChat以外で使用する。\n・自作アプリケーションに組み込む（商用可）\n　Unity以外でもご利用いただけます。\n・VTuber活動の動画の素材として利用する\n・モデルデータ・テクスチャを加工する\n・マテリアル・シェーダの変更はご自由に\n\n〇できないこと\n・モデルデータ・テクスチャの再配布\n　モデルやテクスチャのオリジナルおよび、\n　それを元に加工したデータの再配布は禁止とします。\n・オンラインゲーム内で、プレーヤー間で交換できる\n　アイテムとしての利用も再配布に当たります。\n\n【使い方】\nダウンロードしたZipファイルを解凍後、Unityパッケージをプロジェクトにインポートしてください。Unity以外の環境はFBXフォルダ内のモデルデータ・テクスチャをご利用いただけます。\n\n【免責事項】\n当データ及び当データの一部を使用していかなる損害が発生したとしても当方はその責を負いません。","url":"https://booth.pm/ja/items/1200840","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/e1268668-be07-4201-814f-45e16892cfb6/i/1200840/f020db4c-ce55-4c4e-85ed-472d1d5deefe_base_resized.jpg"}
     </script>
     <link rel="shortcut icon" type="image/x-icon" href=
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
-    "apple-touch-icon-precomposed">
-  </head>
-  <body>
-    <noscript><iframe height="0" src=
-    "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
+    "apple-touch-icon-precomposed"><noscript><iframe height="0"
+    src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="V+9Nz9HVLpEQCNamqBzcVO3QBKCHSNk+pL6odc/mPLs="></script>
+    nonce="gbfSY5sjDkTvxY59Szc7SZZE77X6v4t2INbbvkbodxI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
